# etg

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Window.cpp  Window.h  main.cpp  plan.txt
focuses/: Focusable.h  MainMenu.cpp  MainMenu.h  Scene.cpp  Scene.h
objects/Base/: AutoAnimTexture.cpp  AutoAnimTexture.h  Object.cpp  Object.h  TextureBase.cpp  TextureBase.h
objects/Scene/: Character.cpp  Character.h
objects/Scene/Enemies/: Boss.cpp  Boss.h  Enemy.cpp  Enemy.h
objects/Scene/Guns/: Gun.cpp  Gun.h  PistolGun.cpp  PistolGun.h  Projectile.cpp  Projectile.h  RifleGun.cpp  RifleGun.h  ShotGun.cpp  ShotGun.h  SniperGun.cpp  SniperGun.h
objects/Scene/Player/: Boost.h  Player.cpp  Player.h
objects/Scene/World/: RoomGraph.cpp  RoomGraph.h  World.cpp  World.h
objects/Scene/World/Room/: Chest.cpp  Chest.h  Entity.cpp  Entity.h  Room.cpp  Room.h
objects/UI/: Button.cpp  Button.h  HUD.cpp  HUD.h  StatusBar.h
utils/: CameraController.cpp  CameraController.h  SmartVector.cpp  SmartVector.h  Textures.cpp  Textures.h
